<resources>
    <string name="app_name">My Application</string>
    <string name="my_text_field_hint">Цель на день: </string>
    <string name="my_text_field_hint2">2000</string>
    <string name="my_text_field_hint3">Выполнено:</string>
    <string name="my_text_field_hint4">1200</string>
    <string name="my_text_field_hint5">Вы на пути к цели!</string>
    <string name="my_text_field_hint6">День 1</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="name">Name</string>
    <string name="_50_1">Рассчитайте вашу норму воды в день по формуле: 50 мл * 1 кг веса и внесите результат в поле ввода:</string>
    <string name="closeactivity">CloseActivity</string>
    <string name="complete">Готово</string>
</resources>