<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    tools:context=".FragmentTwo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="102dp"
            android:layout_height="92dp"
            android:backgroundTint="#E9F4FA"
            android:contentDescription="@string/todo2"
            android:foregroundTint="#ADD7EF"
            android:onClick="onMyButtonClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.943"
            app:srcCompat="@android:drawable/ic_popup_reminder"
            app:tint="#7DBDE1"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="282dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="150dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/my_text_field_hint"
                android:text="@string/my_text_field_hint"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/my_text_field_hint2"
                android:text="@string/my_text_field_hint2"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:visibility="visible"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="283dp"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="150dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.28"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/my_text_field_hint3"
                android:text="@string/my_text_field_hint3"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="85dp"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/my_text_field_hint4"
                android:rotationX="-2"
                android:text="@string/my_text_field_hint4"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="154dp"
            android:layout_height="41dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="Вы на пути к цели!"
            android:textColor="#e3e6e8"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="165dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/my_text_field_hint6"
            android:text="@string/my_text_field_hint6"
            android:textColor="@color/white"
            android:textSize="45sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="15dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
